# scissor

./: .env.example  README.md  pyproject.toml
scissor/: __init__.py  agent.py
scissor/sub_agents/: __init__.py
scissor/sub_agents/ecomax/: __init__.py  agent.py  prompt.py
scissor/sub_agents/topic_extractor/: __init__.py  agent.py  prompt.py
scissor/sub_agents/veritas/: __init__.py  agent.py  prompt.py
